# Shelldone

./: .cirrus.yml  .gitignore  .gitmodules  .mcp_profiles.key  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  Makefile  PRIVACY.md  README-DISTRO-MAINTAINER.md  README.md  get-deps  mkdocs_macros.py  pyproject.toml  todo.machine.md
.agentcontrol/: agentcontrol.project.json  template.json  template.sha256
.github/: CODEOWNERS  pull_request_template.md
.serena/: project.yml
agentcontrol/: .codexignore  AGENTS.md  README.md  __init__.py  agentcall.yaml  requirements.txt  todo.machine.md
agents/: README.md  manifest.json
agents/openai/: README.md  __init__.py  bridge.py  pyproject.toml
assets/: open-shelldone-here  shelldone-nautilus.py  shelldone.appdata.xml  shelldone.desktop
async_ossl/: Cargo.toml
automation/: progress_rules.yaml
base91/: Cargo.toml
bidi/: Cargo.toml  README.md
bintree/: Cargo.toml
ci/: PKGBUILD.template  add-color-screen-shots.sh  appimage.sh  build-docs.sh  check-rust-version.sh  create-release.sh  deploy.sh  flatpak.sh  generate-docs.py  generate-workflows.py  make-color-screen-shots.sh  make-flathub-pr.sh  make-winget-pr.sh  shelldone-homebrew-macos.rb.template  shelldone-linuxbrew.rb.template  source-archive.sh  subst-release-info.py  update-derived-files.sh  windows-installer.iss
codec/: Cargo.toml
color-types/: Cargo.toml
color-types/src/: lib.rs
config/: Cargo.toml
config/derive/: Cargo.toml
config/personas/: core.yaml  flux.yaml  nova.yaml
config/src/: background.rs  bell.rs  cell.rs  color.rs  config.rs  daemon.rs  exec_domain.rs  font.rs  frontend.rs  keyassignment.rs  keys.rs  lib.rs  lua.rs  meta.rs  scheme_data.rs  serial.rs  ssh.rs  terminal.rs  tls.rs  units.rs  unix.rs  version.rs  window.rs  wsl.rs
docs/: IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  PROGRESS_REPORT.md  README.markdown  WAVE1_COMPLETE.md  book.toml  changelog.md  contributing.md  copymode.md  escape-sequences.md  faq.md  features.md  help.md  hyperlinks.md  imgcat.md  index.md  installation.md  mkdocs-base.yml  multiplexing.md  quickselect.md  scrollback.md  serial.md  shell-integration.md  sponsor.md  ssh.md  status.md  tasks.yaml  terms.md  (+2 more)
procinfo/: Cargo.toml
procinfo/src/: lib.rs  linux.rs
shelldone-agentd/: Cargo.toml  build.rs
shelldone-agentd/benches/: policy_bench.rs
shelldone-agentd/proto/: mcp.proto
shelldone-agentd/src/: continuum.rs  lib.rs  main.rs  policy_engine.rs  telemetry.rs
shelldone-agentd/src/adapters/ack/: command_runner.rs
shelldone-agentd/src/adapters/agents/: mod.rs  repo_mem.rs
shelldone-agentd/src/adapters/mcp/: grpc.rs  mod.rs  repo_file.rs  repo_mem.rs  tls.rs
shelldone-agentd/src/adapters/termbridge/: mod.rs  repo_file.rs  repo_mem.rs
shelldone-agentd/src/adapters/termbridge/clipboard/: mod.rs  system.rs
shelldone-agentd/src/adapters/termbridge/terminals/: alacritty.rs  iterm2.rs  kitty.rs  konsole.rs  mod.rs  tilix.rs  wezterm.rs  windows_terminal.rs
shelldone-agentd/src/app/ack/: approvals.rs  mod.rs  model.rs  service.rs
shelldone-agentd/src/app/agents/: mod.rs  service.rs
shelldone-agentd/src/app/mcp/: service.rs
shelldone-agentd/src/app/termbridge/: clipboard_service.rs  discovery.rs  mod.rs  service.rs
shelldone-agentd/src/domain/: mod.rs
shelldone-agentd/src/domain/agents/: aggregate.rs  events.rs  mod.rs  value_object.rs
shelldone-agentd/src/domain/mcp/: aggregate.rs  events.rs  mod.rs  value_object.rs
shelldone-agentd/src/domain/termbridge/: aggregate.rs  clipboard.rs  events.rs  mod.rs  value_object.rs
shelldone-agentd/src/ports/: mod.rs
shelldone-agentd/src/ports/ack/: command_runner.rs
shelldone-agentd/src/ports/agents/: mod.rs  repo_port.rs
shelldone-agentd/src/ports/mcp/: mod.rs  repo_port.rs
shelldone-agentd/src/ports/termbridge/: binding_repo.rs  capability_repo.rs  clipboard_port.rs  mod.rs  terminal_port.rs
shelldone-agentd/tests/: e2e_ack.rs  e2e_mcp_grpc.rs
shelldone-cell/: Cargo.toml
shelldone-cell/src/: color.rs  image.rs  lib.rs
shelldone-char-props/: Cargo.toml
shelldone-char-props/codegen/: Cargo.toml
shelldone-char-props/src/: white_space.rs  widechar_width.rs
shelldone-client/: Cargo.toml
shelldone-client/src/: client.rs  discovery.rs  domain.rs
shelldone-client/src/pane/: clientpane.rs  mousestate.rs  renderable.rs
shelldone-dynamic/: Cargo.toml
shelldone-dynamic/derive/: Cargo.toml
shelldone-dynamic/derive/src/: attr.rs  fromdynamic.rs  todynamic.rs
shelldone-dynamic/src/: lib.rs  object.rs
shelldone-dynamic/tests/: fromdynamic.rs  todynamic.rs
shelldone-escape-parser/: Cargo.toml
shelldone-escape-parser/src/: apc.rs  color.rs  csi.rs  error.rs  esc.rs  hyperlink.rs  lib.rs  osc.rs
shelldone-escape-parser/src/parser/: mod.rs  sixel.rs
shelldone-escape-parser/src/tmux_cc/: mod.rs
shelldone-gui-subcommands/: Cargo.toml
shelldone-gui-subcommands/src/: lib.rs
shelldone-input-types/: Cargo.toml
shelldone-input-types/src/: lib.rs
shelldone-mux-server/: Cargo.toml
shelldone-mux-server-impl/: Cargo.toml
shelldone-mux-server-impl/src/: dispatch.rs  lib.rs  local.rs  sessionhandler.rs
shelldone-mux-server/src/: daemonize.rs  main.rs  ossl.rs  sigma.rs
shelldone-surface/: Cargo.toml
shelldone-surface/src/: cellcluster.rs  change.rs  hyperlink.rs  lib.rs
shelldone-surface/src/line/: cellref.rs  clusterline.rs  line.rs  line_impl.rs  mod.rs  test.rs  vecstorage.rs
shelldone-uds/: Cargo.toml
tabout/: Cargo.toml
term/: Cargo.toml  README.md
term/src/: color.rs  config.rs  input.rs  lib.rs  screen.rs  terminal.rs
term/src/terminalstate/: image.rs  iterm.rs  kitty.rs  mod.rs  mouse.rs  performer.rs  sixel.rs
term/src/test/: mod.rs
termwiz/: CHANGELOG.md  Cargo.toml
termwiz/data/: shelldone.terminfo  xterm-256color-italic.terminfo
termwiz/examples/: gennerdfonts.rs  widgets_basic.rs  widgets_nested.rs
termwiz/src/: error.rs  input.rs  lib.rs
termwiz/src/caps/: mod.rs  probed.rs
termwiz/src/render/: terminfo.rs  windows.rs
termwiz/src/widgets/: layout.rs  mod.rs
(+987 files in other folders)
