[package]
name = "shelldone-color-types"
version = "0.3.0"
authors = ["Shelldone Team"]
edition = "2018"
repository = "https://github.com/shelldone/shelldone"
description = "Types for working with colors"
license = "MIT"

[features]
use_serde = ["serde"]
std = ["serde/std", "dep:deltae", "csscolorparser/lab"]

[dependencies]
csscolorparser = {workspace=true, optional=true}
deltae = {workspace = true, optional=true}
num-traits = {workspace=true, features=["libm"]}
serde = {workspace=true, features = ["derive"], optional=true}
shelldone-dynamic.workspace = true
