[package]
name = "shelldone-agentd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Shelldone Team"]
description = "Shelldone agent control plane daemon (UTIF-Σ foundation)."

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true }
regorus = "0.2"
zstd = "0.13"
sha2 = "0.10"

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "io-util"] }
tempfile = { workspace = true }
