[package]
name = "shelldone-agentd"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Shelldone Team"]
description = "Shelldone agent control plane daemon (UTIF-Σ foundation)."

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
dirs = "5"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "fs", "io-util", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
regorus = "0.2"
zstd = "0.13"
sha2 = "0.10"
hex = "0.4"
serde_bytes = "0.11"
base64 = "0.22"
regex = "1.10"
once_cell = "1.19"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "reqwest-client"] }
lru = "0.12"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
tonic = { version = "0.12", features = ["transport", "tls"] }
prost = "0.13"
prost-types = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }
notify = "6.1"
rustls = "0.23"
rustls-pemfile = "2.2"
which = "4.4"

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "io-util"] }
tempfile = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }
rcgen = "0.12"
proptest = "1.4"
tower = { version = "0.4", features = ["util"] }

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }
protoc-bin-vendored = "3.2.0"

[[bench]]
name = "policy_bench"
harness = false
