[package]
authors = ["Shelldone Team"]
name = "shelldone-cell"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/shelldone/shelldone"
description = "Model a Cell in a Terminal display"
license = "MIT"
documentation = "https://docs.rs/shelldone-cell"
keywords = ["terminal", "cell"]

[dependencies]
finl_unicode.workspace = true
image = {workspace=true, optional=true}
log = {workspace = true, optional=true}
ordered-float = {workspace = true, optional=true}
sha2 = {workspace=true, optional=true}
serde = {workspace=true, optional=true}
thiserror = {workspace=true, optional=true}
shelldone-blob-leases = {workspace = true, optional=true}
shelldone-char-props.workspace = true
shelldone-color-types.workspace = true
shelldone-escape-parser.workspace = true
shelldone-dynamic.workspace = true

[features]
std = ["serde/std", "shelldone-char-props/std", "shelldone-color-types/std", "shelldone-escape-parser/std", "shelldone-dynamic/std", "finl_unicode/std"]
use_serde = ["dep:serde", "shelldone-color-types/use_serde"]
use_image = ["dep:image", "dep:shelldone-blob-leases", "dep:log", "dep:ordered-float", "dep:sha2", "dep:thiserror"]

[dev-dependencies]

