[package]
authors = ["Shelldone Team"]
name = "shelldone-char-props"
version = "0.1.3"
edition = "2021"
repository = "https://github.com/shelldone/shelldone"
description = "Unicode and other character properties"
license = "MIT"
documentation = "https://docs.rs/shelldone-char-props"
keywords = ["terminal", "unicode", "nerdfonts", "emoji"]
readme = "README.md"

[dependencies]
phf.workspace = true
serde = {workspace=true, optional=true}
ucd-trie.workspace = true

[features]
default = ["std"]
std = ["serde/std", "ucd-trie/std", "phf/std"]
use_serde = ["serde"]

[dev-dependencies]
criterion.workspace = true
k9.workspace = true
termwiz.workspace = true

[[bench]]
name = "wcwidth"
harness = false
