[package]
authors = ["Shelldone Team"]
name = "shelldone-escape-parser"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/shelldone/shelldone"
description = "Escape Sequence Parser"
license = "MIT"
documentation = "https://docs.rs/shelldone-escape-parser"
keywords = ["terminal", "escape", "parser"]

[dependencies]
base64 = {workspace = true, default-features=false, features=["alloc"]}
bitflags = "2.0"
hex = {workspace = true, default-features=false, features=["alloc"]}
image = {workspace =true, optional=true }
log.workspace = true
nix = { workspace=true, optional=true, features=["mman", "fs"] }
num-derive.workspace = true
num-traits.workspace = true
ordered-float.workspace = true
pest = {workspace = true, optional=true}
pest_derive = {workspace = true, optional=true}
serde = {workspace=true, optional=true}
sha2 = {workspace=true, optional=true}
thiserror = {version = "2.0", default-features=false }
vtparse = {workspace = true, features=["alloc"]}
shelldone-blob-leases = {workspace=true, optional=true}
shelldone-color-types.workspace = true
shelldone-dynamic.workspace = true
shelldone-input-types = {workspace = true, default-features=false}

[target."cfg(windows)".dependencies.winapi]
workspace = true
optional = true
features = [
    "winbase",
    "winerror",
    "winnls",
    "winuser",
    "consoleapi",
    "handleapi",
    "fileapi",
    "synchapi",
    "memoryapi",
    "winnt",
    "impl-default"
]

[features]
std = ["vtparse/std", "thiserror/std", "shelldone-input-types/std", "hex/std", "shelldone-dynamic/std"]
kitty-shm = ["dep:nix", "dep:winapi"]
use_serde = ["dep:serde", "shelldone-color-types/use_serde", "shelldone-blob-leases/serde", "bitflags/serde", "shelldone-input-types/serde"]
use_image = ["image", "dep:image"]
image = ["sha2", "shelldone-blob-leases"]
tmux_cc = ["dep:pest", "dep:pest_derive"]
docs = ["use_serde", "image", "tmux_cc", "kitty-shm"]

[dev-dependencies]
criterion.workspace = true
env_logger.workspace = true
k9.workspace = true

[package.metadata.docs.rs]
features = ["docs"]
rustdoc-args = ["--cfg", "feature=\"docs\""]
