[package]
name = "shelldone-gui-subcommands"
version = "0.1.0"
authors = ["Shelldone Team <team@shelldone.dev>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
config.workspace = true
