[package]
name = "shelldone-input-types"
version = "0.1.0"
authors = ["Shelldone Team <team@shelldone.dev>"]
edition = "2021"
repository = "https://github.com/shelldone/shelldone"
description = "config serialization for shelldone via dynamic json-like data values"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
euclid.workspace = true
serde = {workspace=true, features = ["rc", "derive"], optional=true}
shelldone-dynamic.workspace = true

[features]
default = ["serde", "std"]
std = ["serde/std", "euclid/std"]
