[package]
name = "shelldone-mux-server-impl"
version = "0.1.0"
authors = ["Shelldone Team <team@shelldone.dev>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-io.workspace = true
async_ossl.workspace = true
codec.workspace = true
config.workspace = true
dns-lookup.workspace = true
futures.workspace = true
hostname.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
mux.workspace = true
portable-pty = { workspace=true, features = ["serde_support"]}
promise.workspace = true
rangeset.workspace = true
rcgen.workspace = true
smol.workspace = true
termwiz = { workspace=true, features=["use_serde"] }
url.workspace = true
shelldone-client.workspace = true
shelldone-term = { workspace=true, features=["use_serde"] }
shelldone-uds.workspace = true

[target."cfg(windows)".dependencies]
winapi = { workspace=true, features = [ "winuser" ]}
