[package]
name = "shelldone-uds"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/shelldone/shelldone"
description = "Portable unix domain sockets"
license = "MIT"
documentation = "https://docs.rs/shelldone-uds"

[dependencies]
async-io.workspace = true
uds_windows.workspace = true
