[package]
name = "tabout"
version = "0.3.0"
authors = ["Shelldone Team <team@shelldone.dev>"]
edition = "2018"
repository = "https://github.com/shelldone/shelldone"
description = "Tabulate output for CLI programs"
license = "MIT"
documentation = "https://docs.rs/tabout"

[dependencies]
termwiz.workspace = true
