[project]
name = "shelldone-openai-adapter"
version = "0.1.0"
description = "Shelldone bridge for the OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai-agents==0.2.2",
    "openai>=1.42.0",
]

[project.scripts]
shelldone-openai-bridge = "agents.openai.bridge:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
