[package]
name = "shelldone-dynamic-derive"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/shelldone/shelldone"
description = "config serialization for shelldone via dynamic json-like data values"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = {workspace=true, features=["extra-traits"]}
